#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET utils)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES
    cryptohelper.cpp
    filesystem.cpp
    grpchelper.cpp
    image.cpp
    json.cpp
    parser.cpp
    pkcs11helper.cpp
    time.cpp
)

# ######################################################################################################################
# Includes
# ######################################################################################################################

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

find_package(gRPC REQUIRED)

target_link_libraries(
    ${TARGET}
    PUBLIC aoscommon Poco::Foundation gRPC::grpc++
    PRIVATE Poco::JSON
)

# ######################################################################################################################
# Install
# ######################################################################################################################

install(TARGETS ${TARGET} DESTINATION lib)

install(
    DIRECTORY ${CMAKE_SOURCE_DIR}/include/utils
    DESTINATION include
    FILES_MATCHING
    PATTERN "*.hpp"
)
