#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET downloader_test)

# ######################################################################################################################
# Dependencies
# ######################################################################################################################

# Poco lib
find_package(Poco REQUIRED Net NetSSL Util)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES downloader_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} aosdownloader Poco::Net Poco::NetSSL Poco::Util GTest::gmock_main)
