#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET iamclient_test)

# ######################################################################################################################
# Dependencies
# ######################################################################################################################

# Poco lib
find_package(Poco REQUIRED Foundation)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES iamclient_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} aosiamclient testutils GTest::gmock_main Poco::Foundation)
