#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET pbconvert_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES common_test.cpp)

if(WITH_IAM_API)
    list(APPEND SOURCES iam_test.cpp)
endif()

if(WITH_SM_API)
    list(APPEND SOURCES sm_test.cpp)
endif()

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} aostestutils aospbconvert GTest::gmock_main)
